--- a/src/components/core/Header.astro
+++ b/src/components/core/Header.astro
@@ -7,7 +7,7 @@ import { Search } from "@/components/core/Search";
 import { Button } from "@/components/ui/button";
 
 import { docconfig, SITE } from "config";
-import { Github } from "lucide-react";
+import { Gitlab } from "simple-icons-astro";
 
 // To pass the tailwindcss classes to the astro component
 const { class: className } = Astro.props;
@@ -23,19 +23,19 @@ const { class: className } = Astro.props;
     class="flex space-x-4 justify-between items-center md:items-center md:space-x-0 md:max-w-8xl"
   >
     <div class="font-bold flex flex-row items-center">
-      <a href="/" class="px-4 hidden md:flex no-underline">
+      <a href=`${import.meta.env.BASE_URL}` class="px-4 hidden md:flex no-underline">
         <Button
           client:load
           className="flex gap-2 hover:no-underline text-2xl"
           variant="link"
         >
-          <img src="/logo.svg" alt="Logo" class="w-[2rem] h-[2rem]" />
+          <img src=`${import.meta.env.BASE_URL}/logo.svg` alt="Logo" class="w-[2rem] h-[2rem]" />
           {SITE.title}
         </Button>
       </a>
       <a href="/" class="px-4 flex md:hidden">
         <Button client:load className="" variant="ghost" size="icon">
-          <img src="/logo.svg" alt="Logo" class="w-[2rem] h-[2rem]" />
+          <img src=`${import.meta.env.BASE_URL}/logo.svg` alt="Logo" class="w-[2rem] h-[2rem]" />
         </Button>
       </a>
       <div class="hidden md:block">
@@ -49,7 +49,7 @@ const { class: className } = Astro.props;
         !docconfig.hide_repo_button && (
           <a href={SITE.repo} target="_blank">
             <Button client:load className="" variant="ghost" size="icon">
-              <Github className="w-[1.2rem] h-[1.2rem]" />
+              <Gitlab className="w-[1.2rem] h-[1.2rem]" />
             </Button>
           </a>
         )
