landing and title

--- a/src/components/home/hero.astro
+++ b/src/components/home/hero.astro
@@ -18,11 +18,11 @@ import KittyAstronaut from "@/assets/KittyAstronaut.svg";
       <h1
         class="text-pretty text-center md:text-left md:text-4xl lg:text-5xl tracking-wide"
       >
-        Elevate Your Documentation with a <i class="text-primary">Celestial</i> Touch
+         Seamlesly augment your apps with <i class="text-primary">Brain-Computer</i> interface
       </h1>
       <a href=`${import.meta.env.BASE_URL}/intro` class="py-4">
         <Button size="lg" className="rounded-lg">
-          <h4 class="text-lg">Get started</h4>
+          <h4 class="text-lg">Meet BoreNoMore</h4>
         </Button>
       </a>
     </div>
