--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,10 +4,22 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  padding: 2rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
+}
+
+.slogan {
+  font-size: 2rem;
+  font-weight: 500;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.image {
+    margin: 3rem 0rem;
 }
 
 @media screen and (max-width: 996px) {
