--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -19,3 +19,9 @@
   margin-bottom: 1rem;
   text-align: center;
 }
+
+@media screen and (max-width: 996px) {
+  .slogan{
+    font-size: 1rem;
+  }
+}
