--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -34,6 +34,13 @@
   .heroBanner {
     padding: 2rem;
   }
+
+  .heroTitle {
+    font-size: 1.3rem !important;
+  }
+  .slogan{
+    font-size: 1rem;
+  }
 }
 
 .buttons {
